# cpp-testing

./: CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  commit.sh  main.cpp  run.sh
src/: aocd1.cpp  aocd1.hpp  test.cpp
